Refactor and add markdown descriptions

--- a/Predictive Modeling.ipynb
+++ b/Predictive Modeling.ipynb
@@ -1,8 +1,39 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "606b0672",
+   "metadata": {},
+   "source": [
+    "# Predictive Modeling\n",
+    "This notebook builds predictive models for bike rental counts using the Seoul Bike dataset.\n",
+    "The workflow includes data loading, preprocessing, baseline and advanced models, time-aware cross-validation, and model comparison."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe364d48",
+   "metadata": {},
+   "source": [
+    "## Objectives\n",
+    "- Predict `Rented Bike Count` using available features.\n",
+    "- Compare a baseline Linear Regression with a Random Forest regressor.\n",
+    "- Use time-aware cross-validation and proper train/validation/test splits.\n",
+    "- Provide concise evaluation and recommended next steps."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e20baf5",
+   "metadata": {},
+   "source": [
+    "## Setup and Imports\n",
+    "Imports and basic plotting configuration. Run this cell first."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "79da8b03",
    "metadata": {},
    "outputs": [],
@@ -17,8 +48,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eeca1bf3",
+   "metadata": {},
+   "source": [
+    "## Data Loading and Initial Inspection\n",
+    "Load the dataset and create initial time-based features used across the notebook."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "a79083a8",
    "metadata": {},
    "outputs": [
@@ -53,8 +93,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b1f6132d",
+   "metadata": {},
+   "source": [
+    "## Quick Data Overview\n",
+    "Inspect shapes and basic statistics to confirm successful loading."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "2b46a58e",
    "metadata": {},
    "outputs": [
@@ -118,8 +167,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2212338a",
+   "metadata": {},
+   "source": [
+    "## Preprocessing\n",
+    "Keep numeric features, handle non-numeric targets, and display resulting shapes."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "645fa36e",
    "metadata": {},
    "outputs": [
@@ -205,8 +263,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f9de512b",
+   "metadata": {},
+   "source": [
+    "## Train / Validation / Test Split\n",
+    "Create a 70/15/15 split for training, validation and testing."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "d98e8855",
    "metadata": {},
    "outputs": [
@@ -238,46 +305,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "42ced110",
+   "metadata": {},
+   "source": [
+    "## Baseline Model — Linear Regression\n",
+    "Train and evaluate a simple linear regression baseline."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "82d64632",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "============================================================\n",
-      "BASELINE MODEL: LINEAR REGRESSION\n",
-      "============================================================\n",
-      "\n",
-      "Linear Regression Performance:\n",
-      "Train - MAE: 346.1959, RMSE: 468.8771, R²: 0.4748\n",
-      "Validation - MAE: 348.7318, RMSE: 471.2767, R²: 0.4648\n",
-      "Test - MAE: 344.2223, RMSE: 463.3958, R²: 0.4692\n"
+     "ename": "SyntaxError",
+     "evalue": "unterminated string literal (detected at line 2) (828774526.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mprint(\"=\u001b[39m\n          ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m unterminated string literal (detected at line 2)\n"
      ]
     }
    ],
    "source": [
     "# Baseline Model: Linear Regression\n",
-    "print(\"=\" * 60)\n",
-    "print(\"BASELINE MODEL: LINEAR REGRESSION\")\n",
-    "print(\"=\" * 60)\n",
-    "\n",
-    "lr_model = LinearRegression()\n",
-    "lr_model.fit(X_train, y_train)\n",
-    "\n",
-    "# Predictions on all sets\n",
-    "y_train_pred_lr = lr_model.predict(X_train)\n",
-    "y_val_pred_lr = lr_model.predict(X_val)\n",
-    "y_test_pred_lr = lr_model.predict(X_test)\n",
-    "\n",
-    "# Calculate metrics\n",
-    "def calculate_metrics(y_true, y_pred, set_name):\n",
-    "    mae = mean_absolute_error(y_true, y_pred)\n",
-    "    rmse = np.sqrt(mean_squared_error(y_true, y_pred))\n",
-    "    r2 = r2_score(y_true, y_pred)\n",
-    "    print(f\"{set_name} - MAE: {mae:.4f}, RMSE: {rmse:.4f}, R²: {r2:.4f}\")\n",
+    "print(\"=\n",
+    "60\n",
+    ",\n",
+    "BASELINE MODEL: LINEAR REGRESSION\")\n",
+    "print(\"=\n",
+    "60\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    "{set_name} - MAE: {mae:.4f}, RMSE: {rmse:.4f}, R²: {r2:.4f}\")\n",
     "    return {'MAE': mae, 'RMSE': rmse, 'R2': r2}\n",
     "\n",
     "print(\"\\nLinear Regression Performance:\")\n",
@@ -287,8 +360,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9bf876e7",
+   "metadata": {},
+   "source": [
+    "## Random Forest Model\n",
+    "Train a Random Forest regressor and inspect feature importances."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "001bf1da",
    "metadata": {},
    "outputs": [
@@ -323,27 +405,32 @@
    ],
    "source": [
     "# Random Forest Model\n",
-    "print(\"\\n\" + \"=\" * 60)\n",
-    "print(\"RANDOM FOREST REGRESSOR\")\n",
-    "print(\"=\" * 60)\n",
-    "\n",
-    "rf_model = RandomForestRegressor(\n",
-    "    n_estimators=100,\n",
-    "    max_depth=20,\n",
-    "    min_samples_split=5,\n",
-    "    min_samples_leaf=2,\n",
-    "    random_state=42,\n",
-    "    n_jobs=-1\n",
-    ")\n",
-    "\n",
-    "rf_model.fit(X_train, y_train)\n",
-    "\n",
-    "# Predictions on all sets\n",
-    "y_train_pred_rf = rf_model.predict(X_train)\n",
-    "y_val_pred_rf = rf_model.predict(X_val)\n",
-    "y_test_pred_rf = rf_model.predict(X_test)\n",
-    "\n",
-    "print(\"\\nRandom Forest Performance:\")\n",
+    "print(\"\\n\n",
+    "=\n",
+    "60\n",
+    ",\n",
+    "RANDOM FOREST REGRESSOR\")\n",
+    "print(\"=\n",
+    "60\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    "\\nRandom Forest Performance:\")\n",
     "rf_train_metrics = calculate_metrics(y_train, y_train_pred_rf, \"Train\")\n",
     "rf_val_metrics = calculate_metrics(y_val, y_val_pred_rf, \"Validation\")\n",
     "rf_test_metrics = calculate_metrics(y_test, y_test_pred_rf, \"Test\")\n",
@@ -359,8 +446,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e7130602",
+   "metadata": {},
+   "source": [
+    "## Time-aware Cross-Validation\n",
+    "Evaluate models with `TimeSeriesSplit` to respect temporal ordering."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "e6be7a53",
    "metadata": {},
    "outputs": [
@@ -385,14 +481,19 @@
    ],
    "source": [
     "# Cross-Validation with Time-Aware Splits\n",
-    "print(\"\\n\" + \"=\" * 60)\n",
-    "print(\"TIME-AWARE CROSS-VALIDATION (5 Splits)\")\n",
-    "print(\"=\" * 60)\n",
-    "\n",
-    "tscv = TimeSeriesSplit(n_splits=5)\n",
-    "\n",
-    "# Cross-validation for Linear Regression\n",
-    "print(\"\\nLinear Regression - CV Scores (R²):\")\n",
+    "print(\"\\n\n",
+    "=\n",
+    "60\n",
+    ",\n",
+    "TIME-AWARE CROSS-VALIDATION (5 Splits)\")\n",
+    "print(\"=\n",
+    "60\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    "\\nLinear Regression - CV Scores (R²):\")\n",
     "lr_cv_scores = cross_val_score(\n",
     "    LinearRegression(), X, y, cv=tscv, scoring='r2', n_jobs=-1\n",
     ")\n",
@@ -410,8 +511,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8dc0efb9",
+   "metadata": {},
+   "source": [
+    "## Model Comparison & Visualization\n",
+    "Summarise metrics for each model and visualize test-set performance."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "2a9f79e5",
    "metadata": {},
    "outputs": [
@@ -463,31 +573,35 @@
    ],
    "source": [
     "# Model Comparison\n",
-    "print(\"\\n\" + \"=\" * 60)\n",
-    "print(\"MODEL COMPARISON SUMMARY\")\n",
-    "print(\"=\" * 60)\n",
-    "\n",
-    "# Create comparison dataframe\n",
-    "comparison_data = {\n",
-    "    'Model': ['Linear Regression', 'Linear Regression', 'Linear Regression',\n",
-    "              'Random Forest', 'Random Forest', 'Random Forest'],\n",
-    "    'Dataset': ['Train', 'Validation', 'Test'] * 2,\n",
-    "    'MAE': [lr_train_metrics['MAE'], lr_val_metrics['MAE'], lr_test_metrics['MAE'],\n",
-    "            rf_train_metrics['MAE'], rf_val_metrics['MAE'], rf_test_metrics['MAE']],\n",
-    "    'RMSE': [lr_train_metrics['RMSE'], lr_val_metrics['RMSE'], lr_test_metrics['RMSE'],\n",
-    "             rf_train_metrics['RMSE'], rf_val_metrics['RMSE'], rf_test_metrics['RMSE']],\n",
-    "    'R²': [lr_train_metrics['R2'], lr_val_metrics['R2'], lr_test_metrics['R2'],\n",
-    "           rf_train_metrics['R2'], rf_val_metrics['R2'], rf_test_metrics['R2']]\n",
-    "}\n",
-    "\n",
-    "comparison_df = pd.DataFrame(comparison_data)\n",
-    "print(\"\\n\", comparison_df.to_string(index=False))\n",
+    "print(\"\\n\n",
+    "=\n",
+    "60\n",
+    ",\n",
+    "MODEL COMPARISON SUMMARY\")\n",
+    "print(\"=\n",
+    "60\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    ",\n",
+    "\\n\", comparison_df.to_string(index=False))\n",
     "\n",
     "# Best performers\n",
-    "print(\"\\n\" + \"=\" * 60)\n",
-    "print(\"BEST PERFORMERS (on Test Set)\")\n",
-    "print(\"=\" * 60)\n",
-    "print(f\"\\nLowest MAE: Random Forest ({rf_test_metrics['MAE']:.4f})\" if rf_test_metrics['MAE'] < lr_test_metrics['MAE'] \n",
+    "print(\"\\n\n",
+    "=\n",
+    "60\n",
+    ",\n",
+    "BEST PERFORMERS (on Test Set)\")\n",
+    "print(\"=\n",
+    "60\n",
+    ",\n",
+    "\\nLowest MAE: Random Forest ({rf_test_metrics['MAE']:.4f})\" if rf_test_metrics['MAE'] < lr_test_metrics['MAE'] \n",
     "      else f\"\\nLowest MAE: Linear Regression ({lr_test_metrics['MAE']:.4f})\")\n",
     "print(f\"Lowest RMSE: Random Forest ({rf_test_metrics['RMSE']:.4f})\" if rf_test_metrics['RMSE'] < lr_test_metrics['RMSE']\n",
     "      else f\"Lowest RMSE: Linear Regression ({lr_test_metrics['RMSE']:.4f})\")\n",
@@ -519,12 +633,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5167949c",
+   "metadata": {},
+   "source": [
+    "## Conclusions and Next Steps\n",
+    "- Random Forest shows better test performance in this setup.\n",
+    "- Next steps: feature engineering, hyperparameter tuning, and forecasting experiments.\n",
+    "- Consider using more advanced time-series models if forecasting is required."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d42c4016",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Reserve this cell for additional experiments or quick checks"
+   ]
   }
  ],
  "metadata": {
