--- a/EDA_Mark.ipynb
+++ b/EDA_Mark.ipynb
@@ -10,7 +10,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
+   "id": "d53ba68d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/markrudolf/VSCode/Seoul_Bike_Demand/venv/bin/python\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "print(sys.executable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "e5f72221",
    "metadata": {},
    "outputs": [],
@@ -849,7 +868,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dds",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -863,7 +882,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
