--- a/Predictive Modeling.ipynb
+++ b/Predictive Modeling.ipynb
@@ -1005,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "ade39d27",
    "metadata": {},
    "outputs": [
@@ -1073,7 +1073,6 @@
     "    print(\"Computing SHAP values for FULL dataset...\")\n",
     "    print(\"This will take ~5-10 minutes but only needs to be done ONCE\\n\")\n",
     "    \n",
-    "    # Compute and save SHAP for the FULL dataset\n",
     "    shap_data = compute_and_save_shap_full_dataset(best_rf_model, X, save_dir=SHAP_SAVE_DIR)\n",
     "\n",
     "print(f\"\\n SHAP values available for {shap_data['dataset_size']} samples\")"
@@ -1089,27 +1088,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "58d9b79e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
-    "Generate Visualization only for a sample or for the entire dataset \n",
-    "'''\n",
-    "\n",
-    "# shap_values_rf, X_sample = get_sample_for_plotting(\n",
-    "#     shap_data, \n",
-    "#     sample_size=1000,\n",
-    "#     random_state=42\n",
-    "# )\n",
-    "\n",
     "shap_values_rf, X_sample = get_sample_for_plotting(shap_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "280d1142",
    "metadata": {},
    "outputs": [
@@ -1150,7 +1139,7 @@
    "source": [
     "print(\"\\n   Generating SHAP visualizations...\")\n",
     "\n",
-    "# SHAP Summary Plot (dot)\n",
+    "# SHAP Summary Plot\n",
     "plt.figure(figsize=(16, 4))\n",
     "shap.summary_plot(shap_values_rf, X_sample, plot_type=\"dot\", show=False)\n",
     "plt.title('SHAP Summary Plot - Feature Impact', fontsize=14, fontweight='bold', pad=20)\n",
