--- a/Predictive Modeling.ipynb
+++ b/Predictive Modeling.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "79da8b03",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,6 @@
     "from sklearn.model_selection import TimeSeriesSplit, cross_validate, GridSearchCV\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.metrics import mean_absolute_error, r2_score\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -54,7 +53,7 @@
     "# Load dataset (same source as EDA)\n",
     "df = pd.read_csv(\"SeoulBikeData.csv\", encoding=\"latin1\")\n",
     "\n",
-    "print(\"Rows, columns:\", df.shape)\n"
+    "print(\"Rows, columns:\", df.shape)"
    ]
   },
   {
@@ -199,6 +198,27 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "5da95a11",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Sum of bike rentals on non-functioning days: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print sum of bike rentals over all non-functioning days to verify removal\n",
+    "print(\"\\nSum of bike rentals on non-functioning days:\",\n",
+    "      y[X[\"Functioning Day\"] == \"No\"].sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "14e3abac",
    "metadata": {},
    "outputs": [],
@@ -228,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "vdhb5llr1ca",
    "metadata": {},
    "outputs": [],
@@ -239,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "af9dc8fc",
    "metadata": {},
    "outputs": [
